tests/compile_fail/var_not_defined.ray
fn main() {
    let a = b;
}
\o
b is not defined
